remove fixed width and text-align for list of restaurants

--- a/css/styles.css
+++ b/css/styles.css
@@ -166,8 +166,6 @@ nav h1 a {
   margin: 15px;
   min-height: 380px;
   padding: 0 30px 25px;
-  text-align: left;
-  width: 270px;
 }
 
 #restaurants-list .restaurant-img {
